[package]
name = "mini-web3"
version = "0.1.0"
edition = "2021"
description = "A mini Web3 blockchain node in Rust"
authors = ["Your Name <you@example.com>"]

[[bin]]
name = "mini-web3"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"
